--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -56,8 +56,7 @@ a {
 .page-header {
   color: #fff;
   text-align: center;
-  background-color: #159957;
-  background-image: linear-gradient(120deg, #155799, #159957); }
+  background-color: #28bbbb; }
 
 @media screen and (min-width: 64em) {
   .page-header {
@@ -126,7 +125,7 @@ a {
   margin-top: 2rem;
   margin-bottom: 1rem;
   font-weight: normal;
-  color: #159957; }
+  color: #28bbbb; }
 .main-content p {
   margin-bottom: 1em; }
 .main-content code {
